--- a/pages/16271.html
+++ b/pages/16271.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -368,7 +367,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#about'>About</a></li><li><a href='#quotes'>Quotes</a></li><li><a href='#RelationToHegel'>Relation to Hegel</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='about'>About</h2>
 
-<p>Meister Eckhart was a medieval christian <a class='existingWikiWord' href='/nlab/show/mysticism'>mystic</a>.</p>
+<p>Meister Eckhart was a medieval christian <span class='newWikiWord'>mystic<a href='/nlab/new/mystic'>?</a></span>.</p>
 
 <blockquote>
 <p>The German monk Meister Eckhart (1260-1327) was the first to develop the terminology of philosophy in German, translating and adapting Latin terms. For him, God becomes conscious of himself only within his creation. Eckhart also argues that Divine Knowledge is ‘the negation of negation’. As with other mystics, Eckhart’s aim was the unification of the soul with God. Christ is continually born within each believing soul. (<a href='https://www.marxists.org/reference/archive/smith-cyril/works/articles/interim.htm'>source</a>)</p>
@@ -381,7 +380,7 @@ margin-left: 0em;
 
 <p id='TheEye'> The eye with which God sees me is the eye with which I see Him; my eye and His eye are one and the same. In righteousness I am weighed in God and He in me. If God did not exist nor would I; if I did not exist, nor would He. But there is no need to know this, for there are things that are easily misunderstood (and that can be grasped only in the concept). (quoted in <a href='#Hegel1832'>Hegel 1832, p 249</a>)</p>
 
-<p id='DiesZuWissenIstichtNot'> Nun bitte ich euch, ebenso zu sein, auf daß ihr diese Rede verstehet; denn ich sage euch bei der ewigen Wahrheit: Wenn ihr dieser Wahrheit, von der wir nun sprechen wollen, nicht gleicht, so könnt ihr mich nicht verstehen. <math class='maruku-mathml' display='inline' id='mathml_44d653afa3befdd34cdd857b03c45035856c1386_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_44d653afa3befdd34cdd857b03c45035856c1386_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> So denn sagen wir, daß der Mensch so arm dastehen müsse, daß er keine Stätte sei noch habe, darin Gott wirken könne. Wo der Mensch (noch) Stätte (in sich) behält, da behält er noch Unterschiedenheit. Darum bitte ich Gott, daß er mich Gottes quitt mache; denn mein wesentliches Sein ist oberhalb von Gott, sofern wir Gott als Beginn der Kreaturen fassen. In jenem Sein Gottes nämlich, wo Gott über allem Sein und über aller Unterschiedenheit ist, dort war ich selber, da wollte ich mich selber und erkannte mich selber (willens), diesen Menschen (= mich) zu schaffen. Und darum bin ich Ursache meiner selbst meinem Sein nach, das ewig ist, nicht aber meinem Werden nach, das zeitlich ist. Und darum bin ich ungeboren, und nach der Weise meiner Ungeborenheit kann ich niemals sterben. Nach der Weise meiner Ungeborenheit bin ich ewig gewesen und bin ich jetzt und werde ich ewiglich bleiben. Was ich meiner Geborenheit nach bin, das wird sterben und zunichte werden, denn es ist sterblich; darum muß es mit der Zeit verderben. In meiner (ewigen) Geburt wurden alle Dinge geboren, und ich war Ursache meiner selbst und aller Dinge; und hätte ich gewollt, so wäre weder ich noch wären alle Dinge; wäre aber ich nicht, so wäre auch »Gott« nicht: daß Gott »Gott« ist, dafür bin ich die Ursache; wäre ich nicht, so wäre Gott nicht »Gott«. Dies zu wissen ist nicht not. (Eckehart, Predigten <em><a href='http://www.teeweg.de/de/varia/selig-die%20armen.html'>Selig sind die Armen im Geiste</a></em>)</p>
+<p id='DiesZuWissenIstichtNot'> Nun bitte ich euch, ebenso zu sein, auf daß ihr diese Rede verstehet; denn ich sage euch bei der ewigen Wahrheit: Wenn ihr dieser Wahrheit, von der wir nun sprechen wollen, nicht gleicht, so könnt ihr mich nicht verstehen. <math class='maruku-mathml' display='inline' id='mathml_f1eba718115cc33e8e064228948341a42a7924ab_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_f1eba718115cc33e8e064228948341a42a7924ab_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> So denn sagen wir, daß der Mensch so arm dastehen müsse, daß er keine Stätte sei noch habe, darin Gott wirken könne. Wo der Mensch (noch) Stätte (in sich) behält, da behält er noch Unterschiedenheit. Darum bitte ich Gott, daß er mich Gottes quitt mache; denn mein wesentliches Sein ist oberhalb von Gott, sofern wir Gott als Beginn der Kreaturen fassen. In jenem Sein Gottes nämlich, wo Gott über allem Sein und über aller Unterschiedenheit ist, dort war ich selber, da wollte ich mich selber und erkannte mich selber (willens), diesen Menschen (= mich) zu schaffen. Und darum bin ich Ursache meiner selbst meinem Sein nach, das ewig ist, nicht aber meinem Werden nach, das zeitlich ist. Und darum bin ich ungeboren, und nach der Weise meiner Ungeborenheit kann ich niemals sterben. Nach der Weise meiner Ungeborenheit bin ich ewig gewesen und bin ich jetzt und werde ich ewiglich bleiben. Was ich meiner Geborenheit nach bin, das wird sterben und zunichte werden, denn es ist sterblich; darum muß es mit der Zeit verderben. In meiner (ewigen) Geburt wurden alle Dinge geboren, und ich war Ursache meiner selbst und aller Dinge; und hätte ich gewollt, so wäre weder ich noch wären alle Dinge; wäre aber ich nicht, so wäre auch »Gott« nicht: daß Gott »Gott« ist, dafür bin ich die Ursache; wäre ich nicht, so wäre Gott nicht »Gott«. Dies zu wissen ist nicht not. (Eckehart, Predigten <em><a href='http://www.teeweg.de/de/varia/selig-die%20armen.html'>Selig sind die Armen im Geiste</a></em>)</p>
 </blockquote>
 
 <h2 id='RelationToHegel'>Relation to Hegel</h2>
@@ -426,19 +425,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May  3, 2017 07:15:09 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (51.9.254.136)
+  <p>
+  Last revised on July 28, 2018 at 05:37:07.
+  See the <a href="https://ncatlab.org/nlab/history/Meister Eckhart" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Meister+Eckhart" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Meister+Eckhart/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Meister+Eckhart" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Meister+Eckhart" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Meister+Eckhart" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Meister+Eckhart/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Meister+Eckhart" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Meister+Eckhart" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Meister Eckhart/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Meister+Eckhart" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Meister+Eckhart" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Meister+Eckhart" id="view_source" rel="nofollow">Source</a>
