--- a/pages/18451.html
+++ b/pages/18451.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -307,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>A <em>small groupoid</em> is a <a class='existingWikiWord' href='/nlab/show/groupoid'>groupoid</a> with a <a class='existingWikiWord' href='/nlab/show/small+set'>small set</a> of <a class='existingWikiWord' href='/nlab/show/object'>objects</a>, instead of a <a class='existingWikiWord' href='/nlab/show/proper+class'>proper class</a>.</p>
+      <p>A <em>small groupoid</em> is a <a class='existingWikiWord' href='/nlab/show/groupoid'>groupoid</a> with a <a class='existingWikiWord' href='/nlab/show/small+set'>small set</a> of <a class='existingWikiWord' href='/nlab/show/object'>objects</a>, instead of a <a class='existingWikiWord' href='/nlab/show/proper+class'>proper class</a>. Hence a small groupoid is a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> that is also a groupoid</p>
 
 <p>In plain groupoid theory (<a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>) smallness is usually the default meaning of “groupoid”. But if one thinks of groupoids as special cases of <a class='existingWikiWord' href='/nlab/show/category'>categories</a>, and since for categories the default definition allows a proper class of objects, while otherwise one explicitly speaks of a <em><a class='existingWikiWord' href='/nlab/show/small+category'>small category</a></em>, it does make sense to speak of “small groupoids” at times.</p>
 
@@ -317,14 +317,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June  5, 2018 at 11:46:34.
+  Last revised on July 28, 2018 at 06:55:49.
   See the <a href="https://ncatlab.org/nlab/history/small groupoid" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/small+groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/small+groupoid/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/small+groupoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/small+groupoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/small+groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/small+groupoid/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/small+groupoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/small+groupoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/small groupoid/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
