--- a/pages/18451.html
+++ b/pages/18451.html
@@ -307,24 +307,21 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p>A <em>small groupoid</em> is a <a class='existingWikiWord' href='/nlab/show/groupoid'>groupoid</a> with a <a class='existingWikiWord' href='/nlab/show/small+set'>small set</a> of <a class='existingWikiWord' href='/nlab/show/object'>objects</a>, instead of a <a class='existingWikiWord' href='/nlab/show/proper+class'>proper class</a>. Hence a small groupoid is a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> that is also a groupoid</p>
+      <p>A <em>small groupoid</em> is a <a class='existingWikiWord' href='/nlab/show/groupoid'>groupoid</a> with a <a class='existingWikiWord' href='/nlab/show/small+set'>small set</a> of <a class='existingWikiWord' href='/nlab/show/objects'>objects</a>, instead of a <a class='existingWikiWord' href='/nlab/show/proper+class'>proper class</a>. Hence a small groupoid is a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> that is also a groupoid</p>
 
-<p>In plain groupoid theory (<a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>) smallness is usually the default meaning of “groupoid”. But if one thinks of groupoids as special cases of <a class='existingWikiWord' href='/nlab/show/category'>categories</a>, and since for categories the default definition allows a proper class of objects, while otherwise one explicitly speaks of a <em><a class='existingWikiWord' href='/nlab/show/small+category'>small category</a></em>, it does make sense to speak of “small groupoids” at times.</p>
-
-<p>
-</p>
+<p>In plain groupoid theory (<a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>) smallness is usually the default meaning of “groupoid”. But if one thinks of groupoids as special cases of <a class='existingWikiWord' href='/nlab/show/categories'>categories</a>, and since for categories the default definition allows a proper class of objects, while otherwise one explicitly speaks of a <em><a class='existingWikiWord' href='/nlab/show/small+category'>small category</a></em>, it does make sense to speak of “small groupoids” at times.</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 28, 2018 at 06:55:49.
+  Last revised on July 28, 2018 at 08:22:39.
   See the <a href="https://ncatlab.org/nlab/history/small groupoid" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/small+groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/small+groupoid/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/small+groupoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/small+groupoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/small+groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/small+groupoid/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/small+groupoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/small+groupoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/small groupoid/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
