--- a/pages/1788.html
+++ b/pages/1788.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
-<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1532905248" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1532905248" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -306,20 +306,18 @@ margin-left: 0em;
 
 <div id="revision">
       <p><a class='existingWikiWord' href='/nlab/show/small+groupoids'>small groupoids</a></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/monoidal+category'>monoidal category</a></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 29, 2018 at 04:10:26.
+  Last revised on July 29, 2018 at 19:25:59.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1603" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1603 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1604" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1604 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
