--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -305,19 +305,24 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p><a class='existingWikiWord' href='/nlab/show/small+groupoids'>small groupoids</a></p>
+      <h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
+<ul>
+<li><a href='#abc'>Abc</a></li>
+</ul>
+</div>
+</p><h2 id='abc'>Abc</h2><p><a class='existingWikiWord' href='/nlab/show/small+groupoids'>small groupoids</a></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 29, 2018 at 19:25:59.
+  Last revised on July 30, 2018 at 03:14:17.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1604" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1604 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1605" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1605 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
