--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,7 +305,24 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
+      <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c4a75acd0453a6f0de7c8adff47d5291f8ceb9b4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>dgcAlg</mi> <mrow><mi>ℝ</mi><mo>,</mo><mo>≥</mo><mn>0</mn><mo>,</mo><mi>proj</mi></mrow> <mi>op</mi></msubsup><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Spec</mi></munder><mover><mo>⟵</mo><mi>𝒪</mi></mover></munderover><mspace width='thickmathspace'></mspace><mo stretchy='false'>[</mo><msup><mi>SuperFormalCartSp</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Γ</mi></munder><mover><mo>⟶</mo><mi>const</mi></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>sSet</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
+  dgcAlg^{op}_{\mathbb{R}, \geq 0, proj}
+    \;
+    \underoverset
+      {\underset{ Spec }{\longrightarrow}}
+      {\overset{ \mathcal{O} }{\longleftarrow}}
+      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
+    \;
+  [SuperFormalCartSp^{op},sSet_{Qu}]_{proj,loc}
+    \;
+    \underoverset
+      {\underset{\Gamma}{\longrightarrow}}
+      {\overset{const}{\longrightarrow}}
+      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
+    \;
+  sSet_{Qu}
+
+</annotation></semantics></math></div><h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
 <ul>
 <li><a href='#abc'>Abc</a></li>
 </ul>
@@ -315,14 +332,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 30, 2018 at 03:14:17.
+  Last revised on July 30, 2018 at 06:19:51.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1605" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1605 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1606" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1606 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
